Fix long NPC types wrapping out of type box

--- a/less/npc.less
+++ b/less/npc.less
@@ -36,6 +36,10 @@
         position: relative;
       }
 
+      &:hover input {
+        padding-right: 1em;
+      }
+
       .config-button {
         position: absolute;
         display: none;
